--- a/public/translations/ru/default.json
+++ b/public/translations/ru/default.json
@@ -1,86 +1,1 @@
-{
-    "about_comp": "О нашей компании",
-    "about_team": "О команде Eco Power Motors",
-    "about_txt": "ECOPOWER MOTORS — инновационная компания по производству электромобилей, стремящаяся преобразовать автомобильную промышленность с помощью устойчивых и экологически безопасных транспортных решений. Наша миссия — ускорить глобальный переход на электромобили (EV) и сократить выбросы углерода. В ECOPOWER MOTORS мы стремимся разрабатывать и производить электромобили премиум-класса, которые сочетают в себе передовые технологии, выдающиеся характеристики и элегантный дизайн. Наши инженеры, дизайнеры и специалисты по электромобилям неустанно работают над созданием электромобилей, отвечающих меняющимся потребностям и желаниям наших клиентов.",
-    "about_us": "ECOPOWER MOTORS — инновационная компания по производству электромобилей, стремящаяся преобразовать автомобильную промышленность с помощью устойчивых и экологически чистых транспортных решений. Наша миссия — ускорить глобальный переход на электромобили (EV) и сократить выбросы углерода.\n\nВ ECOPOWER MOTORS мы стремимся разрабатывать и производить высококачественные электромобили, сочетающие в себе передовые технологии, исключительную производительность и элегантный дизайн. Наша команда инженеров, дизайнеров и экспертов в области электромобилей неустанно работает над созданием электромобилей, отвечающих растущим потребностям и желаниям наших клиентов.\n\nНами движет наша приверженность экологической устойчивости. За счет отказа от использования ископаемого топлива наши электромобили значительно сокращают выбросы парниковых газов и помогают бороться с изменением климата. Мы верим в более чистое будущее, где транспорт работает на возобновляемых источниках энергии.\n\nПомимо нашего внимания к устойчивому развитию, мы уделяем первостепенное внимание безопасности и надежности. Наши электромобили проходят тщательные испытания и соответствуют самым высоким стандартам безопасности, чтобы обеспечить благополучие наших водителей и пассажиров. Мы стремимся обеспечить беспроблемное и приятное вождение, сохраняя при этом максимальный уровень безопасности.\n\nECOPOWER MOTORS также занимается созданием комплексной зарядной инфраструктуры для поддержки широкого распространения электромобилей. Мы сотрудничаем с правительствами, предприятиями и сообществами, чтобы расширить доступность зарядных станций и продвигать удобные варианты зарядки для наших клиентов.\n\nКак компания, ориентированная на клиента, мы ценим отзывы и вклад наших пользователей. Мы постоянно прислушиваемся к потребностям и предпочтениям наших клиентов, чтобы улучшить наши продукты и услуги. Наша цель — превзойти ожидания и предоставить исключительный опыт владения для каждого клиента ECOPOWER MOTORS.\n\nПрисоединяйтесь к нам в нашем путешествии к более экологичному и устойчивому будущему. Вместе мы можем добиться позитивных изменений и создать мир, в котором мобильность будет одновременно и экологически чистой, и приятной.",
-    "afzallik": "Почему вам стоит купить электромобили у нас?",
-    "afzallik_desc1": "Почему электромобили обеспечивают высокую энергоэффективность. При использовании электрокомплектов на переходы тратится меньше энергии. Это позволяет увеличить скорость вывода денег на долгосрочных или ежедневных данных.",
-    "afzallik_desc2": "Цены на электроэнергию бесплатны сотни причин, почему одежда и средства безопасности бесплатны, и почему электромобили являются энергоэффективными для вас. Это звонящий в вашей ассимиляции, и вы также можете потерять его для получения энергии.",
-    "afzallik_desc3": "Почему электромобили имеют технический пробел и имеют больше возможностей для расширения? В результате появляется возможность осваивать новые технические решения, использовать их и быть высокоэффективными в этой области. Это повысит вашу финансовую эффективность и даст возможность использовать технические решения.",
-    "afzallik_desc4": "Почему электромобили не используют энергию, они больше помогают экологии страны. В долгосрочной перспективе важно снизить вредные выбросы в атмосферу и защитить атмосферу от темноты.",
-    "afzallik_name1": "Энергоэффективность",
-    "afzallik_name2": "Цены на энергию",
-    "afzallik_name3": "Технический пробел и возможности расширения",
-    "afzallik_name4": "Экология",
-    "all_brands": "Все бренды",
-    "all_model": "Все модели",
-    "bar1": "НАДЕЖНЫЙ",
-    "bar2": "3 года опыта",
-    "bar3": "БУХГАЛТЕРСКИЕ УСЛУГИ",
-    "bar4": "Сильное качество",
-    "bar5": "Официальный СЕРВИС",
-    "best": "Самые продаваемые",
-    "brand": "Марки автомобилей",
-    "buy": "Покупка",
-    "calc": "Сравнение",
-    "call_center": "Наш колл-центр",
-    "ceo1": "Садулла Кобилжанов",
-    "ceo2": "Садулла Кобилжанов",
-    "ceo_txt": "Ipsum — это просто фиктивный текст полиграфической и наборной индустрии. Lorem Ipsum был стандартным фиктивным текстом в отрасли с 1500-х годов, когда неизвестный печатник взял гранку шрифта и зашифровал ее, чтобы сделать",
-    "contact": "Отправка",
-    "contact1": "Связаться с нами",
-    "contact2": "Имя",
-    "contact3": "Номер телефона",
-    "contact_txt": "Вы оставьте свою информацию здесь и мы свяжемся с вами в ближайшее время ин шаа Аллах.",
-    "foot1": "Компания",
-    "foot10": "Видео обзоры",
-    "foot11": "г.Ташкент, Юнусободский район, дом 7, дом 8а",
-    "foot2": "О компании",
-    "foot3": "Бренды",
-    "foot4": "Наши преимущества",
-    "foot5": "Связаться с нами",
-    "foot6": "Легковые автомобили",
-    "foot7": "Лучшие автомобили",
-    "foot8": "Подержанные автомобили",
-    "foot9": "Расчет затрат",
-    "gallary": "Фотографии нашей компании",
-    "haed2": "Более",
-    "haed3": "Покупки за наличные",
-    "head0": "Перевозка электромобилей по Узбекистану. Самый широкий ассортимент в одном месте.",
-    "head1": "Мультибрендовый магазин электромобилей",
-    "head4": "Бронирование",
-    "instagram": "Инстаграм",
-    "km": "км",
-    "modal": "БЛАГОДАРИМ ВАС ЗА КОНТАКТ",
-    "more": "Узнать больше",
-    "nav1": "Топ модели",
-    "nav2": "О нас",
-    "nav3": "Категории",
-    "nav4": "Обзор",
-    "nav5": "FAQ",
-    "nav6": "Сохранено",
-    "obzor": "Видео обзоры",
-    "price": "Цена",
-    "rasxod": "Расходы",
-    "search": "Поиск автомобилей",
-    "sum": "сум",
-    "team": "Наша команда",
-    "team_txt": "В ECOPOWER MOTORS мы стремимся разрабатывать и производить электромобили премиум-класса, которые сочетают в себе передовые технологии, выдающиеся характеристики и элегантный дизайн. Наши инженеры, дизайнеры и специалисты по электромобилям неустанно работают над созданием электромобилей, отвечающих меняющимся потребностям и желаниям наших клиентов.",
-    "telegram": "Телеграмма",
-    "top_prod": "Топ продукты",
-    "used_car": "Подержанные автомобили",
-    "want_job": "Хотели бы вы работать в Eco Power?",
-    "why_us": "Почему выбрали нас?",
-    "why_us_desc1": "Наши электромобили отличаются авангардным дизайном. Они соответствуют ведущим автомобильным тенденциям этого года с прогрессивностью, инновациями и использованием современных технологий.",
-    "why_us_desc2": "Наша компания использует последние технологические новинки в электрических машинах. У них есть умные помощники, интеграция с IoT, система самозаполнения и другие удобства. Эти технологические возможности делают вашу жизнь быстрее и проще.",
-    "why_us_desc3": "Наши электромобили готовы к быстрому запуску каждый раз, когда они заполнены. Это даст вам эффективную и надежную жизнь с прямым временем безотказной работы.",
-    "why_us_name1": "Авангардный дизайн",
-    "why_us_name2": "Технологические инновации",
-    "why_us_name3": "Быстрый доступ к работе",
-    "hamkorlar": "Что получают партнеры?",
-    "card_1": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_2": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_3": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_4": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_5": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае"
-}
+{"2023":"Все права защищены","about":"О нас","about_text":"Приветствуем вас на новом сайте Clemar – вашем надежном партнере в области профессиональной уборки! Ранее известные под именем Clean Market с более чем 10-летним опытом, мы рады представить вам нашу обновленную и переосмысленную идентичность – Clemar.\n\nС нами вы получаете не просто продукцию, а гарантированное качество и профессионализм в каждой детали. Clemar является ведущим дистрибьютером более чем 25 мировых брендов в Узбекистане, специализирующихся на оборудовании для уборки.\n\nНаш ассортимент включает в себя профессиональные пылесосы для сухой и влажной уборки, а также бумагу, салфетки и бумажные полотенца высокого качества. Но, безусловно, наш главный акцент – это поломоечные машины.\n\nВ Clemar вы найдете широкий выбор аккумуляторных и сетевых поломоечных машин от известных брендов со всего мира. Наш опыт и профессионализм позволяют нам предложить вам только лучшие решения для поддержания чистоты в любых условиях.\n\nМы гордимся тем, что уже сотрудничаем с известными компаниями, и наша репутация в Узбекистане подтверждает наше место среди лучших. Clemar – это не просто поставщик, это ваш надежный партнер в борьбе за чистоту и порядок.\n\nПрисоединяйтесь к нам, выбирайте Clemar, и обеспечьте своему бизнесу высший стандарт уборки и гигиены.","about_us_name":"О нашей компании","barchasi":"Посмотреть все","bizson":"Мы в числах","buy":"Покупать","buynow":"Покупать сейчас","cat":"Каталог","characters":"Характеристика продукта","Clemar":"Clemar - Дистрибьютер более 25 мировых брендов в Узбекистане","con":"Свяжитесь с нами","contacts":"Для связи","con_text":"Оставьте свой номер телефона и наши менеджеры скоро свяжутся с вами","desc_buy":"Будьте уверены, у нас самые качественные продукты!","desc_ph":"Мы даем гарантию на все наши продукты!","description_product":"Подробнее о продукте","dokon":"Наш адрес","faq":"F.A.Q.","h1":"Нажмите на кнопку и получите бонус","h2button":"Локация","hbutton":"Получить бонус","inf1":"Виды продуктов","inf2":"Партнеры","inf3":"Страна","inf4":"Довольных клиентов","infooo":"Информации","insta":"Instagram","kategoriyalar":"Категории","logos":"Нам доверились","mail":"info@clemar.uz","name":"Имя","name_ph":"Качество Продуктов Гарантировано!","negabiz":"Почему выбирают нас ?","pc":"шт. продуктов","phone":"Номер телефона","productss":"Продукты","search":"Поиск","send":"Отправить","sonlar_text":"Выбирайте Clemar – ваш успех в чистоте! Свыше 10 лет опыта, 25+ мировых брендов, профессиональные поломоечные машины, пылесосы, бумага. Наша репутация с известными компаниями - залог качества. В Clemar вы получаете не просто продукцию, но надежного партнера в уборке.","subs":"Подкатегории ","sum":"Сум","tele":"Telegram","text":"Ваше сообщение","top":"Лучшие продукты","tosh":"Ташкент","yangiliklar":"Наши новости","yurakcha":"Избранные"}
