--- a/public/translations/en/default.json
+++ b/public/translations/en/default.json
@@ -1,86 +1,1 @@
-{
-    "about_comp": "About our company",
-    "about_team": "About the Eco Power Motors team",
-    "about_txt": "ECOPOWER MOTORS is an innovative electric vehicle company committed to transforming the automotive industry with sustainable and environmentally friendly transportation solutions. Our mission is to accelerate the global electric vehicle (EV) transition and reduce carbon emissions. At ECOPOWER MOTORS, we are committed to designing and manufacturing premium electric vehicles that combine advanced technology, outstanding performance and elegant design. Our engineers, designers and electric mobility specialists work tirelessly to create EVs that meet the changing needs and desires of our customers.",
-    "about_us": "ECOPOWER MOTORS is an innovative electric car company committed to transforming the automotive industry with sustainable and eco-friendly transportation solutions. Our mission is to accelerate the global transition to electric vehicles (EVs) and reduce carbon emissions.\n\nAt ECOPOWER MOTORS, we strive to design and manufacture high-quality electric vehicles that combine cutting-edge technology, exceptional performance, and elegant design. Our team of engineers, designers, and experts in the field of electric mobility works tirelessly to create EVs that meet the evolving needs and desires of our customers.\n\nWe are driven by our commitment to environmental sustainability. By eliminating the use of fossil fuels, our electric cars significantly reduce greenhouse gas emissions and help combat climate change. We believe in a cleaner future, where transportation is powered by renewable energy sources.\n\nIn addition to our focus on sustainability, we prioritize safety and reliability. Our electric vehicles undergo rigorous testing and adhere to the highest safety standards to ensure the well-being of our drivers and passengers. We aim to provide a seamless and enjoyable driving experience while maintaining the utmost level of safety.\n\nECOPOWER MOTORS is also dedicated to building a comprehensive charging infrastructure to support the widespread adoption of EVs. We collaborate with governments, businesses, and communities to expand the availability of charging stations and promote convenient charging options for our customers.\n\nAs a customer-centric company, we value the feedback and input of our users. We continuously listen to our customers' needs and preferences to improve our products and services. Our goal is to exceed expectations and provide an exceptional ownership experience for every ECOPOWER MOTORS customer.\n\nJoin us on our journey towards a greener and more sustainable future. Together, we can drive positive change and create a world where mobility is both environmentally friendly and enjoyable.",
-    "afzallik": "Why should you buy electric cars from us?",
-    "afzallik_desc1": "Why electric cars provide high energy efficiency. With the use of electric kits, less energy is spent on transitions. This allows you to increase the speed at which you can withdraw money on long-term or daily data.",
-    "afzallik_desc2": "Electricity prices are free hundreds of why clothing and safety supplies are free, and why electric cars are energy efficient for yourself. It's a caller in your assimilation and you can lose it for energy as well.",
-    "afzallik_desc3": "Why electric cars have a technical gap and come with more expansion options. As a result, there is an opportunity to learn new technical solutions, use them and be highly effective in this field. This will increase your financial efficiency and enable you to use technical solutions.",
-    "afzallik_desc4": "Why electric cars do not use energy, they help the country's ecology more. In the long term, this is important to reduce harmful emissions into the atmosphere and protect the atmosphere from dark spots.",
-    "afzallik_name1": "Energy efficiency",
-    "afzallik_name2": "Energy prices",
-    "afzallik_name3": "Technical gap and expansion possibilities",
-    "afzallik_name4": "Ecology",
-    "all_brands": "All brands",
-    "all_model": "All models",
-    "bar1": "RELIABLE",
-    "bar2": "3 years of experience",
-    "bar3": "ACCOUNTING SERVICE",
-    "bar4": "Strong quality",
-    "bar5": "Official SERVICE",
-    "best": "Most sold",
-    "brand": "Car brands",
-    "buy": "Shopping",
-    "calc": "Comparison",
-    "call_center": "Our Call Center",
-    "ceo1": "Sadulla Kobiljanov",
-    "ceo2": "Sadulla Kobiljanov",
-    "ceo_txt": "Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a",
-    "contact": "Sending",
-    "contact1": "Contact us",
-    "contact2": "Name",
-    "contact3": "Phone number",
-    "contact_txt": "You leave your information here and we will contact you soon In Shaa Allah.",
-    "foot1": "Company",
-    "foot10": "Video reviews",
-    "foot11": "7, 8a house, Yunus Obod district, Tashkent city",
-    "foot2": "About the company",
-    "foot3": "Brands",
-    "foot4": "Our advantages",
-    "foot5": "Contact us",
-    "foot6": "Cars",
-    "foot7": "Top cars",
-    "foot8": "Used cars",
-    "foot9": "Calculation of costs",
-    "gallary": "Pictures of our company",
-    "haed2": "More",
-    "haed3": "Shopping for cash",
-    "head0": "Transportation of electric vehicles in Uzbekistan. The widest range in one place.",
-    "head1": "A multi-brand electric vehicle store",
-    "head4": "Booking",
-    "instagram": "Instagram",
-    "km": "km",
-    "modal": "THANK YOU FOR YOUR CONTACT",
-    "more": "Know more",
-    "nav1": "Top models",
-    "nav2": "About Us",
-    "nav3": "Categories",
-    "nav4": "Overview",
-    "nav5": "FAQ",
-    "nav6": "Saved",
-    "obzor": "Video views",
-    "price": "Price",
-    "rasxod": "Expense",
-    "search": "Search for cars",
-    "sum": "soum",
-    "team": "Our team",
-    "team_txt": "At ECOPOWER MOTORS, we are committed to designing and manufacturing premium electric vehicles that combine advanced technology, outstanding performance and elegant design. Our engineers, designers and electric mobility specialists work tirelessly to create EVs that meet the changing needs and desires of our customers.",
-    "telegram": "Telegram",
-    "top_prod": "Top products",
-    "used_car": "Used cars",
-    "want_job": "Would you like to work for Eco Power?",
-    "why_us": "Why choose us?",
-    "why_us_desc1": "Our electric cars are distinguished by their avant-garde design. They are in line with the leading automotive trends of this year with progressiveness, innovation and the use of current technologies.",
-    "why_us_desc2": "Our company uses the latest technological innovations in electric machines. They have smart assistants, IoT integration, self-filling system and other conveniences. These technological possibilities make your life faster and easier.",
-    "why_us_desc3": "Our electric cars are ready for quick start every time they are filled. This will give you an efficient and reliable life with straight up-time.",
-    "why_us_name1": "Avant-garde design",
-    "why_us_name2": "Technological innovations",
-    "why_us_name3": "Quick access to work",
-    "hamkorlar": "What do partners get?",
-    "card_1": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_2": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_3": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_4": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае",
-    "card_5": "Вы подбираете электромобиль, мы даём подтверждение о его наличии на нашем складе в Китае"
-}
+{"2023":"All rights reserved","about":"About Us","about_text":"Welcome to the new website of Clemar - your reliable partner in the field of professional cleaning! Formerly known as Clean Market with over 10 years of experience, we are pleased to introduce you to our updated and reimagined identity - Clemar. With us you get not just products, but guaranteed quality and professionalism in every detail. Clemar is a leading distributor of more than 25 global brands in Uzbekistan, specializing in cleaning equipment. Our range includes professional vacuum cleaners for dry and wet cleaning, as well as high quality paper, napkins and paper towels. But, of course, our main focus is scrubber dryers. At Clemar you will find a wide selection of cordless and corded scrubber dryers from renowned brands from all over the world. Our experience and professionalism allow us to offer you only the best solutions for maintaining cleanliness in any environment. We are proud that we already cooperate with well-known companies, and our reputation in Uzbekistan confirms our place among the best. Clemar is not just a supplier, it is your reliable partner in the fight for cleanliness and order. Join us, choose Clemar, and provide your business with the highest standard of cleaning and hygiene.","about_us_name":"About our company","barchasi":"View all","bizson":"We are in numbers","buy":"Buy","buynow":"Buy now","cat":"Catalog","characters":"Product Feature","Clemar":"Clemar - Distributor of more than 25 world brands in Uzbekistan","con":"Contact us","contacts":"For contact","con_text":"Leave your phone number and our managers will contact you soon","desc_buy":"Rest assured, we have the highest quality products!","desc_ph":"We provide a guarantee on all our products!","description_product":"More about the product","dokon":"Our address","faq":"FAQ","h1":"Click the button and get your bonus","h2button":"Location","hbutton":"Get a bonus","inf1":"Types of products","inf2":"Partners","inf3":"A country","inf4":"Satisfied clients","infooo":"Information","insta":"Instagram","kategoriyalar":"Categories","logos":"They trusted us","mail":"info@clemar.uz","name":"Name","name_ph":"Product Quality Guaranteed!","negabiz":"Why choose us?","pc":"PC. products","phone":"Phone number","productss":"Products","search":"Search","send":"Send","sonlar_text":"Choose Clemar – your success is in cleanliness! Over 10 years of experience, 25+ global brands, professional floor scrubbers, vacuum cleaners, paper. Our reputation with well-known companies is a guarantee of quality. At Clemar you get not just a product, but a reliable cleaning partner.","subs":"Subcategories","sum":"Sum","tele":"Telegram","text":"your message","top":"Best Products","tosh":"Tashkent","yangiliklar":"Our news","yurakcha":"Favorites"}
